# aigenius-main

./: .dockerignore  .env.example  .git_status.txt  .gitignore  AGENTS.md  ARCHITECTURE_VOICE.md  Cargo.toml  README.md  a.html  desktop-server-repo.md  docker-compose.yml  package-lock.json  package.json  profiling_report.json
.agent/: ARCHITECTURE.md
crates/audio-transcoder/: Cargo.toml
crates/audio-transcoder/src/: lib.rs
desktop/: .gitignore  README.md  jest.config.cjs  package-lock.json  package.json  profiling_report.json  test-audio-recording.html  tsconfig.jest.json  tsconfig.json
desktop-server/: .gitignore  Dockerfile  hey.py  jest.config.cjs  package-lock.json  package.json  profiling_report.json  requirements-stt-packaged.txt  requirements-tts.txt  scratch_pyav.py  test-sharp.ts  test-tagger.ts  tsconfig.jest.json  tsconfig.json
desktop-server/native-yolo/: Cargo.toml  package.json
desktop-server/native-yolo/src/: lib.rs
docker/: Dockerfile.backend  Dockerfile.frontend  entrypoint-backend-dev.sh  entrypoint-frontend-dev.sh  frontend.env
frontend/: .eslintrc.json  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  env.example  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  store.ts  tailwind.config.js  tsconfig.improved.json  tsconfig.json
native-yolo/: Cargo.toml
scripts/: AGENTS.md  clone-backend.cjs  dev.cjs  ensure-backend.cjs  initial-publish.cjs  run-backend-dev.cjs  run-desktop-dev.cjs  run-frontend-dev.cjs  run-sync.cjs  sync-backend.cjs  sync-backend.ps1  sync-backend.sh  sync-client.cjs  (+2 more)
(+1213 files in other folders)
