[package]
name = "native-yolo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "1.0", default-features = false, features = ["napi-6"] }
tract-onnx = "0.21"
tract-ndarray = "0.21"
image = "0.25"
ndarray = "0.16"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
